clusters/platform/compiled/security/manifests-platform-security/v1.Service-cert-manager-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: webhook
    app.kubernetes.io/version: v1.12.2
    helm.sh/chart: cert-manager-v1.12.2
    tanka.dev/environment: a916120a6ded3ca7c01e6c3f52c2381957a38d80ebdc2cce
  name: cert-manager-webhook
  namespace: security
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/name: webhook
  type: ClusterIP
